--- a/badminton/package.json
+++ b/badminton/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.1",
-    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-slick": "^0.23.1"
   },
   "scripts": {
     "start": "react-scripts start",
